fixes after review

--- a/index.html
+++ b/index.html
@@ -16,6 +16,34 @@
     <title>Burger site</title>
 </head>
 <body>
+    <navigation class="side-first-page">
+        <ul class="side__list">
+            <li class="side__item side__item--active">
+                <a href="" class="side__item__img" data-goto="1"></a>
+            </li>
+            <li class="side__item">
+                <a href="" class="side__item__img" data-goto="1"></a>
+            </li>
+            <li class="side__item">
+                <a href="" class="side__item__img" data-goto="1"></a>
+            </li>
+            <li class="side__item">
+                <a href="" class="side__item__img" data-goto="1"></a>
+            </li>
+            <li class="side__item">
+                <a href="" class="side__item__img" data-goto="1"></a>
+            </li>
+            <li class="side__item">
+                <a href="" class="side__item__img" data-goto="1"></a>
+            </li>
+            <li class="side__item">
+                <a href="" class="side__item__img" data-goto="1"></a>
+            </li>
+            <li class="side__item">
+                <a href="" class="side__item__img" data-goto="1"></a>
+            </li>
+        </ul>
+    </navigation>
     <div class="wrapper">
         <div class="maincontent">
             <!--First Page-->
@@ -42,42 +70,6 @@
                             </a></div>
                         </div>
                     </header>
-                    <sidebar class="side-first-page">
-                            <ul class="side__list">
-                                <li class="side__item side__item--active">
-                                    <a href="" class="side__item__img" data-goto="1"></a>
-                                    <!--<img class="first-side-menu__item__img" src="img/point.png" alt="dot">-->
-                                </li>
-                                <li class="side__item">
-                                    <a href="" class="side__item__img" data-goto="1"></a>
-                                    <!--<img class="first-side-menu__item__img" src="img/point.png" alt="dot">-->
-                                </li>
-                                <li class="side__item">
-                                    <a href="" class="side__item__img" data-goto="1"></a>
-                                    <!--<img class="first-side-menu__item__img" src="img/point.png" alt="dot">-->
-                                </li>
-                                <li class="side__item">
-                                    <a href="" class="side__item__img" data-goto="1"></a>
-                                    <!--<img class="first-side-menu__item__img" src="img/point.png" alt="dot">-->
-                                </li>
-                                <li class="side__item">
-                                    <a href="" class="side__item__img" data-goto="1"></a>
-                                    <!--<img class="first-side-menu__item__img" src="img/point.png" alt="dot">-->
-                                </li>
-                                <li class="side__item">
-                                    <a href="" class="side__item__img" data-goto="1"></a>
-                                    <!--<img class="first-side-menu__item__img" src="img/point.png" alt="dot">-->
-                                </li>
-                                <li class="side__item">
-                                    <a href="" class="side__item__img" data-goto="1"></a>
-                                    <!--<img class="first-side-menu__item__img" src="img/point.png" alt="dot">-->
-                                </li>
-                                <li class="side__item">
-                                    <a href="" class="side__item__img" data-goto="1"></a>
-                                    <!--<img class="first-side-menu__item__img" src="img/point.png" alt="dot">-->
-                                </li>
-                            </ul>
-                        </sidebar>
                     <main class="main-content__first">
                         <div class="img-first"><img class="img-first__pic" src="img/burger-first.png" alt="burger"></div>
                         <div class="first-general">
@@ -278,13 +270,15 @@
                             <div class="feedback__img" style="background-image: url(img/feedback8.jpg);"></div>
                             <!--<img class="feedback__img" src="img/feedback8.jpg" alt="girl">-->
                             <div class="feedback__content">
-                                <div class="feedback__title">Константин Спилберг</div>
-                                <div class="feedback__text">
-                                    <p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
-                                </div>
-                                <div class="feedback__button">
-                                    <a class="feedback__link" href=""><p>подробнее</p></a>
-                                    <a class="feedback__link--phones" href=""><p>читать отзыв</p></a>
+                                <div class="feedback__tile">
+                                    <div class="feedback__title">Константин Спилберг</div>
+                                    <div class="feedback__text">
+                                        <p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
+                                    </div>
+                                    <div class="feedback__button">
+                                        <a class="feedback__link" href=""><p>подробнее</p></a>
+                                        <a class="feedback__link--phones" href=""><p>читать отзыв</p></a>
+                                    </div>
                                 </div>
                             </div>
                         </li>
@@ -292,13 +286,15 @@
                             <div class="feedback__img" style="background-image: url(img/feedback6.jpg);"></div>
                             <!--<img class="feedback__img" src="img/feedback7.jpg" alt="boy">-->
                             <div class="feedback__content">
-                                <div class="feedback__title">Константин Спилберг</div>
-                                <div class="feedback__text">
-                                    <p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
-                                </div>
-                                <div class="feedback__button">
-                                    <a class="feedback__link" href=""><p>подробнее</p></a>
-                                    <a class="feedback__link--phones" href=""><p>читать отзыв</p></a>
+                                <div class="feedback__tile">
+                                    <div class="feedback__title">Константин Спилберг</div>
+                                    <div class="feedback__text">
+                                        <p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
+                                    </div>
+                                    <div class="feedback__button">
+                                        <a class="feedback__link" href=""><p>подробнее</p></a>
+                                        <a class="feedback__link--phones" href=""><p>читать отзыв</p></a>
+                                    </div>
                                 </div>
                             </div>
                         </li>
@@ -306,13 +302,15 @@
                             <div class="feedback__img" style="background-image: url(img/feedback4.jpg);"></div>
                             <!--<img class="feedback__img" src="img/feedback6.jpg" alt="boy">-->
                             <div class="feedback__content">
-                                <div class="feedback__title">Константин Спилберг</div>
-                                <div class="feedback__text">
-                                    <p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
-                                </div>
-                                <div class="feedback__button">
-                                    <a class="feedback__link" href=""><p>подробнее</p></a>
-                                    <a class="feedback__link--phones" href=""><p>читать отзыв</p></a>
+                                <div class="feedback__tile">
+                                    <div class="feedback__title">Константин Спилберг</div>
+                                    <div class="feedback__text">
+                                        <p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
+                                    </div>
+                                    <div class="feedback__button">
+                                        <a class="feedback__link" href=""><p>подробнее</p></a>
+                                        <a class="feedback__link--phones" href=""><p>читать отзыв</p></a>
+                                    </div>
                                 </div>
                             </div>
                         </li>
@@ -320,13 +318,15 @@
                             <div class="feedback__img" style="background-image: url(img/feedback2.jpg);"></div>
                             <!--<img class="feedback__img" src="img/feedback5.jpg" alt="girl">-->
                             <div class="feedback__content">
-                                <div class="feedback__title">Константин Спилберг</div>
-                                <div class="feedback__text">
-                                    <p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
-                                </div>
-                                <div class="feedback__button">
-                                    <a class="feedback__link" href=""><p>подробнее</p></a>
-                                    <a class="feedback__link--phones" href=""><p>читать отзыв</p></a>
+                                <div class="feedback__tile">
+                                    <div class="feedback__title">Константин Спилберг</div>
+                                    <div class="feedback__text">
+                                        <p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
+                                    </div>
+                                    <div class="feedback__button">
+                                        <a class="feedback__link" href=""><p>подробнее</p></a>
+                                        <a class="feedback__link--phones" href=""><p>читать отзыв</p></a>
+                                    </div>
                                 </div>
                             </div>
                         </li>
@@ -334,13 +334,15 @@
                             <div class="feedback__img" style="background-image: url(img/feedback7.jpg);"></div>
                             <!--<img class="feedback__img" src="img/feedback4.jpg" alt="girl">-->
                             <div class="feedback__content">
-                                <div class="feedback__title">Константин Спилберг</div>
-                                <div class="feedback__text">
-                                    <p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
-                                </div>
-                                <div class="feedback__button">
-                                    <a class="feedback__link" href=""><p>подробнее</p></a>
-                                    <a class="feedback__link--phones" href=""><p>читать отзыв</p></a>
+                                <div class="feedback__tile">
+                                    <div class="feedback__title">Константин Спилберг</div>
+                                    <div class="feedback__text">
+                                        <p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
+                                    </div>
+                                    <div class="feedback__button">
+                                        <a class="feedback__link" href=""><p>подробнее</p></a>
+                                        <a class="feedback__link--phones" href=""><p>читать отзыв</p></a>
+                                    </div>
                                 </div>
                             </div>
                         </li>
@@ -348,13 +350,15 @@
                             <div class="feedback__img" style="background-image: url(img/feedback5.jpg);"></div>
                             <!--<img class="feedback__img" src="img/feedback3.jpg" alt="boy">-->
                             <div class="feedback__content">
-                                <div class="feedback__title">Константин Спилберг</div>
-                                <div class="feedback__text">
-                                    <p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
-                                </div>
-                                <div class="feedback__button">
-                                    <a class="feedback__link" href=""><p>подробнее</p></a>
-                                    <a class="feedback__link--phones" href=""><p>читать отзыв</p></a>
+                                <div class="feedback__tile">
+                                    <div class="feedback__title">Константин Спилберг</div>
+                                    <div class="feedback__text">
+                                        <p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
+                                    </div>
+                                    <div class="feedback__button">
+                                        <a class="feedback__link" href=""><p>подробнее</p></a>
+                                        <a class="feedback__link--phones" href=""><p>читать отзыв</p></a>
+                                    </div>
                                 </div>
                             </div>
                         </li>
@@ -362,13 +366,15 @@
                             <div class="feedback__img" style="background-image: url(img/feedback3.jpg);"></div>
                             <!--<img class="feedback__img" src="img/feedback2.jpg" alt="boy">-->
                             <div class="feedback__content">
-                                <div class="feedback__title">Константин Спилберг</div>
-                                <div class="feedback__text">
-                                    <p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
-                                </div>
-                                <div class="feedback__button">
-                                    <a class="feedback__link" href=""><p>подробнее</p></a>
-                                    <a class="feedback__link--phones" href=""><p>читать отзыв</p></a>
+                                <div class="feedback__tile">
+                                    <div class="feedback__title">Константин Спилберг</div>
+                                    <div class="feedback__text">
+                                        <p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
+                                    </div>
+                                    <div class="feedback__button">
+                                        <a class="feedback__link" href=""><p>подробнее</p></a>
+                                        <a class="feedback__link--phones" href=""><p>читать отзыв</p></a>
+                                    </div>
                                 </div>
                             </div>
                         </li>
@@ -376,13 +382,15 @@
                             <div class="feedback__img" style="background-image: url(img/feedback1.jpg);"></div>
                             <!--<img class="feedback__img" src="img/feedback1.jpg" alt="boy">-->
                             <div class="feedback__content">
-                                <div class="feedback__title">Константин Спилберг</div>
-                                <div class="feedback__text">
-                                    <p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
-                                </div>
-                                <div class="feedback__button">
-                                    <a class="feedback__link" href=""><p>подробнее</p></a>
-                                    <a class="feedback__link--phones" href=""><p>читать отзыв</p></a>
+                                <div class="feedback__tile">
+                                    <div class="feedback__title">Константин Спилберг</div>
+                                    <div class="feedback__text">
+                                        <p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
+                                    </div>
+                                    <div class="feedback__button">
+                                        <a class="feedback__link" href=""><p>подробнее</p></a>
+                                        <a class="feedback__link--phones" href=""><p>читать отзыв</p></a>
+                                    </div>
                                 </div>
                             </div>
                         </li>
