3rd section fix

--- a/index.html
+++ b/index.html
@@ -99,7 +99,6 @@
                     </main>
                     <div class="arrow-first">
                         <a href="" data-goto="1">
-                            <!--<img src="img/arrow1slide.png" alt="arrow">-->
                             <div class="svg_wrap">
                                 <svg class="arrow">
                                     <use xlink:href="img/sprite.svg#arrow-scroll"></use>
@@ -167,8 +166,8 @@
              <section class="section third-page">
                  <div class="container container__third-page">
                     <div class="arrow-left">
-                        <a href="" data-goto="1">
-                            <div class="svg_wrap">
+                        <a class="arrow-left__link" href="" data-goto="1">
+                            <div class="svg__wrap">
                                 <svg class="arrow__left">
                                     <use xlink:href="img/sprite.svg#arrow-scroll"></use>
                                 </svg>
@@ -176,19 +175,23 @@
                         </a>
                     </div>
                     <div class="third-page__main">
-                        <div class="third-page__img__container">
+                        <!--<div class="third-page__img__container">-->
+                        <div class="container__img">
+                            <img class="img-first__pic" src="img/black-burger.png" alt="burger">
                             <div class="third-page__compound">
-                                <div class="compound__main__icon">
+                                <div class="third-page__compound--inner ">
+                                    <div class="compound__main__icon">
                                     <div class="compound__img">
                                         <a href="" data-goto="1">
-                                            <div class="svg_wrap">
+                                            <div class="svg__wrap">
                                                 <svg class="burger__svg">
                                                     <use xlink:href="img/sprite.svg#burger"></use>
                                                 </svg>
                                             </div>
                                         </a>
                                     </div>
-                                    <div class="compound__text"><p>Состав</p></div>
+                                        <div class="compound__text"><p>Состав</p></div>
+                                    </div>
                                 </div>
                                 <div class="third-page__hidden">
                                     <ul class="compound__hidden__list">
@@ -273,13 +276,17 @@
                                     </ul>
                                 </div>
                             </div>
-                            <div class="container__img"><img class="img-first__pic" src="img/black-burger.png" alt="burger"></div>
+                            <!--<div class="container__img"><img class="img-first__pic" src="img/black-burger.png" alt="burger"></div>-->
                             <div class="third-page__icon--first">
                                 <a href="" data-goto="1">
-                                    <div class="svg_wrap">
+                                    <div class="svg_wrap--kkal">
                                         <svg class="kkal">
                                             <use xlink:href="img/sprite.svg#kkal"></use>
                                         </svg>
+                                    </div>
+                                    <div class="compound__text--kkal">
+                                        <p>1200</p>
+                                        <p>kkal</p>
                                     </div>
                                 </a>
                             </div>
@@ -299,7 +306,7 @@
                         </div>
                     </div>
                     <div class="arrow-right">
-                        <a href="" data-goto="1">
+                        <a class="arrow-right__link" href="" data-goto="1">
                             <div class="svg_wrap">
                                 <svg class="arrow__right">
                                     <use xlink:href="img/sprite.svg#arrow-scroll"></use>
