js fixed for first page menu

--- a/index.html
+++ b/index.html
@@ -9,11 +9,6 @@
     <!--<link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/fonts.css">-->
     <link rel="stylesheet" href="css/main.css">
-    <script src="js/svg4everybody.js"></script>
-    <script>src="js/firstmenu.js"</script>
-    <script>
-        svg4everybody();
-    </script>
     <title>Burger site</title>
 </head>
 <body>
@@ -64,28 +59,29 @@
                                 <li class="menu-top__item"><a class="menu-top__link" href="" data-goto="6">контакты</a></li>
                             </ul>
                             <div class="header-button"><a class="header-button__link" href="" data-goto="6">заказать</a></div>
-                            <div class="header-hamburger"><div class="header-menu__link">
-                                <div class="hamburger-menu__link__bars"></div>
-                                <div class="hamburger-menu__link__bars"></div>
-                                <div class="hamburger-menu__link__bars"></div>
+                            <div class="header-hamburger">
+                                <div class="header-menu__link">
+                                    <div class="hamburger-menu__link__bars"></div>
+                                    <div class="hamburger-menu__link__bars"></div>
+                                    <div class="hamburger-menu__link__bars"></div>
+                                </div>
                             </div>
-                                <div class="hidden__menu">
-                                    <div class="menu-hidden__content">
-                                        <div class="menu-hidden__close"><div class="close__icon"></div></div>
-                                        <ul class="menu-hidden__list">
-                                            <li class="menu-hidden__item"><a class="menu-hidden__link" href="" data-goto="1">почему мы</a></li>
-                                            <li class="menu-hidden__dot"></li>
-                                            <li class="menu-hidden__item"><a class="menu-hidden__link" href="" data-goto="2">меню</a></li>
-                                            <li class="menu-hidden__dot"></li>
-                                            <li class="menu-hidden__item"><a class="menu-hidden__link" href="" data-goto="3">советы</a></li>
-                                            <li class="menu-hidden__dot"></li>
-                                            <li class="menu-hidden__item"><a class="menu-hidden__link" href="" data-goto="4">кто мы</a></li>
-                                            <li class="menu-hidden__dot"></li>
-                                            <li class="menu-hidden__item"><a class="menu-hidden__link" href="" data-goto="5">свяжитесь с нами</a></li>
-                                            <li class="menu-hidden__dot"></li>
-                                            <li class="menu-hidden__item"><a class="menu-hidden__link" href="" data-goto="6">контакты</a></li>
-                                        </ul>
-                                    </div>
+                            <div class="hidden__menu">
+                                <div class="menu-hidden__content">
+                                    <div class="menu-hidden__close"><div class="close__icon"></div></div>
+                                    <ul class="menu-hidden__list">
+                                        <li class="menu-hidden__item"><a class="menu-hidden__link" href="" data-goto="1">почему мы</a></li>
+                                        <li class="menu-hidden__dot"></li>
+                                        <li class="menu-hidden__item"><a class="menu-hidden__link" href="" data-goto="2">меню</a></li>
+                                        <li class="menu-hidden__dot"></li>
+                                        <li class="menu-hidden__item"><a class="menu-hidden__link" href="" data-goto="3">советы</a></li>
+                                        <li class="menu-hidden__dot"></li>
+                                        <li class="menu-hidden__item"><a class="menu-hidden__link" href="" data-goto="4">кто мы</a></li>
+                                        <li class="menu-hidden__dot"></li>
+                                        <li class="menu-hidden__item"><a class="menu-hidden__link" href="" data-goto="5">свяжитесь с нами</a></li>
+                                        <li class="menu-hidden__dot"></li>
+                                        <li class="menu-hidden__item"><a class="menu-hidden__link" href="" data-goto="6">контакты</a></li>
+                                    </ul>
                                 </div>
                             </div>
                         </div>
@@ -685,6 +681,8 @@
             </section>
         </div>
     </div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="js/firstmenu.js"></script>
+<script src="js/svg4everybody.js"></script>
 </body>
 </html>
