--- a/index.html
+++ b/index.html
@@ -7,44 +7,45 @@
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.1.20/jquery.fancybox.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/onepage-scroll/1.3.1/onepage-scroll.min.css">
+    <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/onepage-scroll/1.3.1/onepage-scroll.min.css">-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.4/jquery.fullpage.css">
     <link rel="stylesheet" href="css/validetta.css">
     <link rel="stylesheet" href="css/main.css">
     <title>Burger site</title>
 </head>
 <body>
     <navigation class="side-first-page">
-        <ul class="side__list">
-            <li class="side__item side__item--active">
-                <a href="#home" class="side__item__img" data-index="1"></a>
+        <ul id="mainmenu" class="side__list">
+            <li data-menuanchor="home" class="side__item">
+                <a href="#home" class="side__item__img" data-index=""></a>
             </li>
-            <li class="side__item">
-                <a href="#about" class="side__item__img" data-index="2"></a>
+            <li  class="side__item">
+                <a href="#about" class="side__item__img" data-menuanchor="about" data-index=""></a>
             </li>
-            <li class="side__item">
-                <a href="#burger" class="side__item__img" data-goto="1"></a>
+            <li  class="side__item">
+                <a href="#burger" class="side__item__img" data-menuanchor="burger" data-goto=""></a>
             </li>
-            <li class="side__item">
-                <a href="#team" class="side__item__img" data-goto="1"></a>
+            <li data-menuanchor="team" class="side__item">
+                <a href="#team" class="side__item__img" data-goto=""></a>
             </li>
-            <li class="side__item">
-                <a href="#menu" class="side__item__img" data-goto="1"></a>
+            <li data-menuanchor="menu" class="side__item">
+                <a href="#menu" class="side__item__img" data-goto=""></a>
             </li>
-            <li class="side__item">
-                <a href="#feedback" class="side__item__img" data-goto="1"></a>
+            <li data-menuanchor="feedback" class="side__item">
+                <a href="#feedback" class="side__item__img" data-goto=""></a>
             </li>
-            <li class="side__item">
-                <a href="#order" class="side__item__img" data-goto="1"></a>
+            <li data-menuanchor="order" class="side__item">
+                <a href="#order" class="side__item__img" data-goto=""></a>
             </li>
-            <li class="side__item">
-                <a href="#contacts" class="side__item__img" data-goto="1"></a>
+            <li data-menuanchor="contacts" class="side__item">
+                <a href="#contacts" class="side__item__img" data-goto=""></a>
             </li>
         </ul>
     </navigation>
     <div class="wrapper" class="maincontent">
         <!--<div class="maincontent">-->
             <!--First Page-->
-            <section id="home" class="section first-page">
+            <section  data-anchor="home" class="section first-page active">
                 <div class="container">
                     <header class="header">
                         <div class="header-logo">
@@ -52,14 +53,14 @@
                         </div>
                         <div class="header-menu">
                             <ul class="menu-top__list">
-                                <li class="menu-top__item"><a class="menu-top__link" href="#about" data-goto="1">о нас</a></li>
-                                <li class="menu-top__item"><a class="menu-top__link" href="#burger" data-goto="2">бургеры</a></li>
-                                <li class="menu-top__item"><a class="menu-top__link" href="#team" data-goto="3">команда</a></li>
-                                <li class="menu-top__item"><a class="menu-top__link" href="#menu" data-goto="4">меню</a></li>
-                                <li class="menu-top__item"><a class="menu-top__link" href="#feedback" data-goto="5">отзывы</a></li>
-                                <li class="menu-top__item"><a class="menu-top__link" href="#contacts" data-goto="6">контакты</a></li>
+                                <li class="menu-top__item"><a class="menu-top__link" href="#about" data-goto="">о нас</a></li>
+                                <li class="menu-top__item"><a class="menu-top__link" href="#burger" data-goto="">бургеры</a></li>
+                                <li class="menu-top__item"><a class="menu-top__link" href="#team" data-goto="">команда</a></li>
+                                <li class="menu-top__item"><a class="menu-top__link" href="#menu" data-goto="">меню</a></li>
+                                <li class="menu-top__item"><a class="menu-top__link" href="#feedback" data-goto="">отзывы</a></li>
+                                <li class="menu-top__item"><a class="menu-top__link" href="#contacts" data-goto="">контакты</a></li>
                             </ul>
-                            <div class="header-button"><a class="header-button__link" href="#order" data-goto="6">заказать</a></div>
+                            <div class="header-button"><a class="header-button__link" href="#order" data-goto="">заказать</a></div>
                             <div class="header-hamburger">
                                 <div class="header-menu__link">
                                     <div class="hamburger-menu__bars"></div>
@@ -106,7 +107,7 @@
                 </div>
             </section>
             <!--2nd page-->
-            <section id="about" class="section second-page">
+            <section  data-anchor="about" class="section second-page">
                 <div class="container container__secondpage">
                     <div class="secondpage__top">
                         <h2 class="page-title secondpage-main__title">мы лучшие</h2>
@@ -160,7 +161,7 @@
                 </div>
             </section>
             <!--3rd page-->
-             <section id="burger" class="section third-page">
+             <section  data-anchor="burger" class="section third-page">
                  <div class="container container__third-page">
                     <div class="arrow-left">
                         <a class="arrow__link arrow__link--left" href="" data-goto="1">
@@ -589,7 +590,7 @@
                  </div>
             </section>
             <!--4th page -->
-            <section id="team" class="section fouth-page">
+            <section  data-anchor="team" class="section fouth-page">
                 <div class="container">
                     <div class="fouthpage__right">
                         <div class="fouthpage__main">
@@ -665,7 +666,7 @@
             </section>
 
             <!--5th page-->
-            <section id="menu" class="section fifth-page">
+            <section  data-anchor="menu" class="section fifth-page">
                 <!--<div class="container">-->
                     <div class="fifthpage-main">
                                 <h2 class="white-title page-title">меню</h2>
@@ -709,7 +710,7 @@
             </section>
 
             <!--feedback page-->
-            <section id="feedback" class="section feedback-page">
+            <section data-anchor="feedback" class="section feedback-page">
                 <!--<div class="container">-->
                     <ul class="feedback__list">
                         <li class="feedback__item">
@@ -877,7 +878,7 @@
             </section>
 
             <!--7th page-->
-            <section id="order" class="section seventh-page">
+            <section  data-anchor="order" class="section seventh-page">
                 <div class="container seventhpage">
                     <div class="seventhpage__content">
                         <div class="seventhpage__top">
@@ -964,30 +965,32 @@
             </section>
 
             <!--8th page-->
-            <section id="contacts" class="section eightpage">
-                <div id="map" style="height: 95%; width: 100%"></div>
-                <div class="footer">
-                    <div class="container footer__content">
-                        <div class="footer__left">
-                            <div class="address">
-                                <p>Санкт-Петербург, ул.Бабушкина, д.12/1, 15</p>
+            <section  data-anchor="contacts" class="section eightpage">
+                <div class="map-page">
+                    <div id="map" class="map"></div>
+                    <div class="footer">
+                        <div class="container footer__content">
+                            <div class="footer__left">
+                                <div class="address">
+                                    <p>Санкт-Петербург, ул.Бабушкина, д.12/1, 15</p>
+                                </div>
+                                <a href="" class="phone">+7 (812) 377-13-77</a>
                             </div>
-                            <a href="" class="phone">+7 (812) 377-13-77</a>
-                        </div>
-                        <div class="footer__right">
-                            <!--<img src="img/logo.png" alt="some">-->
-                            <svg class="icon">
-                                <use xlink:href="img/sprite.svg#vk"></use>
-                            </svg>
-                            <svg class="icon">
-                                <use xlink:href="img/sprite.svg#fb"></use>
-                            </svg>
-                            <svg class="icon">
-                                <use xlink:href="img/sprite.svg#inst"></use>
-                            </svg>
-                            <svg class="icon">
-                                <use xlink:href="img/sprite.svg#twitter"></use>
-                            </svg>
+                            <div class="footer__right">
+                                <!--<img src="img/logo.png" alt="some">-->
+                                <svg class="icon">
+                                    <use xlink:href="img/sprite.svg#vk"></use>
+                                </svg>
+                                <svg class="icon">
+                                    <use xlink:href="img/sprite.svg#fb"></use>
+                                </svg>
+                                <svg class="icon">
+                                    <use xlink:href="img/sprite.svg#inst"></use>
+                                </svg>
+                                <svg class="icon">
+                                    <use xlink:href="img/sprite.svg#twitter"></use>
+                                </svg>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -996,7 +999,8 @@
     </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.1.20/jquery.fancybox.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/onepage-scroll/1.3.1/jquery.onepage-scroll.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.4/jquery.fullpage.js"></script>
+<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/onepage-scroll/1.3.1/jquery.onepage-scroll.js"></script>-->
 <!--<script src="js/buttons.js"></script>-->
 <script src="js/map.js"></script>
 <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCWNqiipwDvZFaW4cuoZI9TxakkjYLPN3w&callback=initMap"></script>
