--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                                         <li class="menu-hidden__dot"></li>
                                         <li class="menu-hidden__item"><a class="menu-hidden__link" href="#menu" data-goto="2">меню</a></li>
                                         <li class="menu-hidden__dot"></li>
-                                        <li class="menu-hidden__item"><a class="menu-hidden__link" href="burger" data-goto="3">советы</a></li>
+                                        <li class="menu-hidden__item"><a class="menu-hidden__link" href="№burger" data-goto="3">советы</a></li>
                                         <li class="menu-hidden__dot"></li>
                                         <li class="menu-hidden__item"><a class="menu-hidden__link" href="#team" data-goto="4">кто мы</a></li>
                                         <li class="menu-hidden__dot"></li>
