--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
         </ul>
     </navigation>
     <div class="wrapper" class="maincontent">
+        <div class="video">
+            <video width="100%" height="auto" data-keepplaying autoplay loop muted class="burger-video" id="video">
+                <source type="video/mp4" src="img/burger_video.mp4">    
+            </video>
+        </div>
         <!--<div class="maincontent">-->
             <!--First Page-->
             <section  data-anchor="home" class="section first-page active">
@@ -1000,11 +1005,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.1.20/jquery.fancybox.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.4/jquery.fullpage.js"></script>
-<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/onepage-scroll/1.3.1/jquery.onepage-scroll.js"></script>-->
-<!--<script src="js/buttons.js"></script>-->
 <script src="js/map.js"></script>
 <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCWNqiipwDvZFaW4cuoZI9TxakkjYLPN3w&callback=initMap"></script>
-<!--<script src="js/main.js"></script>-->
 <script src="js/ajax.js"></script>
 <script src="js/validetta.js"></script>
 <script src="js/validation.js"></script>
